# catdex

./: Cargo.toml  README.md
src/: main.rs  models.rs  schema.rs
static/: index.html
